fix image alignment

--- a/assets/css/src/_forms.scss
+++ b/assets/css/src/_forms.scss
@@ -6,7 +6,7 @@ input[type="submit"],
 .wp-block-search__button {
 	background-color: var(--action);
 	border: 0;
-	border-radius: 2px;
+	border-radius: 50px;
 	color: #fff;
 	display: inline-block;
 	padding: .53em 1.7em;
