--- a/assets/css/src/_markup-formatting.scss
+++ b/assets/css/src/_markup-formatting.scss
@@ -230,10 +230,6 @@ table {
 		}
 	}
 
-	figure {
-		width: 100%;
-	}
-
 	figure,
 	img {
 		max-width: 100%;
